--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body{
     top: 0;
     left: 0;
     width: 100%;
-    height: 110%;
+    height: 90%;
     background-color: rgba(9, 9, 9, 0.673); /* Cor de sobreposição com 50% de opacidade */
     z-index: 1; /* Coloca a sobreposição acima da imagem de fundo */
 }
@@ -59,7 +59,6 @@ body{
     margin: 0;
     padding: 0;
     padding: 25px;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 20px;
     background-color:rgba(240, 248, 255, 0.895);
     position: relative;
@@ -216,6 +215,7 @@ body{
     width: 330px;
     height: 230px;
     border-radius: 9px;
+
 }
 .areas:hover{
     transform: scale(1.1);
@@ -228,6 +228,7 @@ body{
     display: inline-block; /* Garantir que os elementos .areas sejam inline-block*/
     border-radius: 9px;
     margin-right:20px; /* Adicionar espaço entre os elementos */
+    margin-top: 20px;
 }
 
 /* Estilos para o modal */
