--- a/style.css
+++ b/style.css
@@ -86,13 +86,13 @@ body{
 }
 
 .menu button:focus {
-    box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.5);
+    box-shadow: 0 0 0 3px rgba(255, 145, 1, 0.747);
 }
 
 #loginBtn {
     padding: 13px 20px; 
- 
 }
+
 .login{
     background-color: rgba(255, 68, 0, 0.814);
     padding: 10px;
@@ -249,24 +249,26 @@ body{
 .modal {
     display: none; 
     position: fixed; 
-    z-index: 1; 
+    z-index: 3; 
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.4); 
-    padding-top: 10px;
-    z-index: 3;
+    padding-top: 60px;
+
 }
 
 .modal-content {
     background-color: #fefefe;
     margin: 5% auto;
-    padding: 40px;
+    padding: 30px;
     border: 1px solid #888;
-    width: 50%;
-    border-radius: 20px;
+    width: 80%;
+    max-width: 450px;
+    border-radius: 12px;
+
 }
 
 /* Botão de fechar */
@@ -289,18 +291,19 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 10px;/*espaço entre elementos de um container,usado junto com flex ou grid*/
+    gap: 12px;/*espaço entre elementos de um container,usado junto com flex ou grid*/
+
 }
   
 .title {
     margin: 0;
     font-size: 1.25rem;
-    font-weight: 700;/*deixar em negrito "pesar"*/
+    font-weight: 700;
     color: #212121;
 }
   
 .subtitle {
-    font-size: 0.725rem;
+    font-size: 1rem;
     max-width: 80%;
     text-align: center;
     line-height: 1.1rem;/*espaçamento entre linhas*/
@@ -309,11 +312,10 @@ body{
   
 .input_container {
     width: 100%;
-    height: auto;
     position: relative;
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap: 12px;
 }
   
 .icon {
@@ -325,17 +327,18 @@ body{
 }
   
 .input_label {
-    padding-top: 5px;
-    font-size: 0.75rem;
-    color: #8B8E98;
-    font-weight: 600;
+
+    font-size: 0.875rem;
+    font-weight: 500;
+    color: #333;
+    font-weight: 500;
 }
   
 .input_field {
     width: auto;
     height: 40px;
     padding: 0 0 0 40px;
-    border-radius: 7px;
+    border-radius: 8px;
     outline: none;
     border: 1px solid #e5e5e5;
     filter: drop-shadow(0px 1px 0px #efefef)
