--- a/estilo.css
+++ b/estilo.css
@@ -93,6 +93,7 @@ h2{
     color: rgba(255, 255, 255, 0.362);
 }
 .reservar{
+    color: white;
     text-align: center;
     font-family:'Courier New', Courier, monospace;
     font-size: 30px;
