--- a/estilo-calendario.css
+++ b/estilo-calendario.css
@@ -6,6 +6,70 @@
 body{
     background-color: black;
 }
+
+h1{
+    color: white;
+    text-align: center;
+    font-family:'Courier New', Courier, monospace;
+    font-size: 30px;
+    margin-top: 20px;
+}
+
+.calendario{
+    text-align: center;
+}
+.conteudo .calendario header{
+    position: relative;
+}
+.conteudo{
+    left: 50%;
+    margin: 0 0 0 -250px;
+    position: absolute;
+    width: 500px;
+}
+
+.bnt_ant{
+    left: 80px;
+}
+#mes{
+    color: white;
+    margin-top:20px;
+    font-size: 32px;
+    text-transform: uppercase;
+}
+#ano{
+    color: white;
+    margin-top:20px;
+    font-size: 32px;
+    text-transform: uppercase;
+}
+.bnt_pro{
+    right: 80px;
+}
+
+.calendario header{
+    position: relative;
+}
+
+.bnt_ant,.bnt_pro{
+    position: absolute;
+    top: 50%;
+    height: 32px;
+    width: 32px;
+    line-height: 32px;
+    margin-top: -16px;
+    border: 2px solid #cbd1dc;
+    border-radius:50%;
+    color: #cbd1dc;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.bnt_ant:hover,.bnt_pro:hover{
+    background: #cbd1dc;
+    color: #f9f9f9;
+}
+
 table {
     width: 100%;
     border-collapse: collapse;
