--- a/style.css
+++ b/style.css
@@ -2,7 +2,24 @@
 body{
     background-color: rgb(9, 9, 9);
     color: aliceblue;
+    margin: 0;
+    margin-right: -100px;
 }
+    
+.logo{
+    width: 60px;
+    position: relative;
+    height: 100%;
+    left: 20px;
+}
+
+.logo1 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 10px;
+}
+
 .sob{
     background-image: url(imagens/casa.jpg);
     background-size: cover;
@@ -22,6 +39,7 @@ body{
     z-index: 2; /* Coloca o título e o parágrafo acima da sobreposição */
 }
 .sob h1{
+    padding: 20px;
     margin-top: 100px;
     margin-left: 50px;
     font-size: 50px;
@@ -43,7 +61,7 @@ body{
     border: solid 0px;
     position: relative; /* Garante que o título e o parágrafo estejam posicionados relativamente à .sob */
     z-index: 2; /* Coloca o título e o parágrafo acima da sobreposição */
-}
+    }
 .pos {
     position: absolute;
     top: 0;
@@ -412,4 +430,16 @@ body{
 .reserva{
     cursor: pointer;
 }
-
+  
+  footer{
+    background-color: #333;
+    margin-top: 50px;
+    padding: 0;
+    height: 100%;
+    margin-bottom: -16px;
+    text-align: center;
+  }
+  
+  .logo2{
+    
+  }
