--- a/quartos.css
+++ b/quartos.css
@@ -8,6 +8,8 @@ body{
     display: flex;
     flex-direction: column;
     gap: 20px;
+    margin-left: 100px;
+    margin-right: 100px;
 }
 
 .quarto {
