--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ body{
     top: 0;
     left: 0;
     width: 100%;
-    height: 90%;
+    height: 900px;
     background-color: rgba(9, 9, 9, 0.673); /* Cor de sobreposição com 50% de opacidade */
     z-index: 1; /* Coloca a sobreposição acima da imagem de fundo */
 }
