--- a/grafico.css
+++ b/grafico.css
@@ -1,3 +1,7 @@
+body{
+    background-color: black;
+    color: white;
+}
 
 #chart-container {
     width: 60%;
@@ -15,7 +19,7 @@
     margin-top: 20px;
     padding: 10px 20px;
     font-size: 16px;
-    background-color: #007bff;
+    background-color: #204062;
     color: white;
     border: none;
     cursor: pointer;
@@ -31,4 +35,5 @@ p {
     margin-top: 20px;
     margin-left: 50%;
 }
+
 
