--- a/quartos.css
+++ b/quartos.css
@@ -3,6 +3,11 @@ body{
     background-color: black;
     color: white;
 }
+h1{
+    text-align: center;
+}
+
+.reservar-btn
 
 .coluna {
     display: flex;
