--- a/quartos.css
+++ b/quartos.css
@@ -59,7 +59,7 @@ h2{
 
 /* Estilos do Modal */
 .modal {
-    display: none; /* Esconde o modal por padrão */
+    display: none;
     position: fixed;
     z-index: 1;
     left: 0;
@@ -74,7 +74,7 @@ h2{
 
 .modal-content {
     background-color: #fefefe;
-    margin: 5% auto;
+    margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
@@ -87,6 +87,7 @@ h2{
     float: right;
     font-size: 28px;
     font-weight: bold;
+    cursor: pointer;
 }
 
 .close:hover,
@@ -94,8 +95,51 @@ h2{
     color: black;
     text-decoration: none;
     cursor: pointer;
+    
 }
-/*barra de pesquisa*/
+
+.titulo {
+
+    font-size: 24px;
+    color: #000000;
+}
+
+.met{
+    font-weight: bold;
+}
+
+label {
+    font-size: 18px;
+    color: #555;
+}
+
+select {
+    width: 100%;
+    padding: 10px;
+    margin-top: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+button#confirmBtn {
+    width: 100%;
+    padding: 10px;
+    background-color: #ffa600;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    font-size: 18px;
+    cursor: pointer;
+    margin-top: 20px;
+    width: 50%;
+    margin-left: 120px;
+}
+
+button#confirmBtn:hover {
+    background-color: #ff970f;
+}
+
 #searchBar {
     width: 80%;
     padding: 10px;
@@ -105,6 +149,10 @@ h2{
     border: 1px solid #ccc;
 }
 
+.cartao{
+    margin-top: 10px;
+
+}
 .lupa{
     width: 30px;
     margin-right: 15px;
